--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-aiogram
-asyncio
-os
-csv
-pandas
-numpy
-binance
-talib
+aiogram==2.25.1
+asyncio==3.4.3
+binance==0.3
+numpy==1.24.2
+pandas==2.0.0
+python-binance==1.0.17
+python-dateutil==2.8.2
+python-telegram-bot==20.2
+TA-Lib==0.4.26
+tzdata==2023.3
+tzlocal==4.3
+ujson==5.7.0
